# machine-access-control

./: .cookiecutter.json  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  codecov.yml  esphome-config.yaml  notes.md  noxfile.py  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  constraints.txt  docs.yaml  docs.yml  labeler.yml  release.yml  tests.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: 2026-05-05-mcu-lockup-analysis.md  2026-05-11-mcu-lockup-analysis.md  Makefile  conf.py  export_openapi.py  index.md  reference.md  requirements.txt  usage.md
docs/features/: README.md  always-enabled-config-change.md  always-enabled-machine.md  bulk-fob-adder.md  mcu-heartbeat-resilience.md  slack-slack-command.md
docs/source/: admin.rst  conf.py  configuration.rst  contributing.rst  dm_mac.cli_utils.rst  dm_mac.models.api_schemas.rst  dm_mac.models.machine.rst  dm_mac.models.machine_state.rst  dm_mac.models.rst  dm_mac.models.users.rst  dm_mac.neon_fob_adder.rst  dm_mac.neongetter.rst  dm_mac.rst  dm_mac.slack_handler.rst  dm_mac.utils.rst  dm_mac.views.api.rst  dm_mac.views.machine.rst  dm_mac.views.prometheus.rst  dm_mac.views.rst  grafana-dashboard.json  grafana-dashboard.md  hardware.rst  http-api.rst  index.rst  installation.rst  introduction.rst  modules.rst  neon.rst  slack.rst
esphome-configs/2024.6.4/: hardware-test.md  no-current-input.yaml
esphome-configs/2025.11.2/: hardware-test.yaml  no-current-input.yaml
hardware/v1_mcu/: CCR10S_enclosure-base.html  CCR10S_enclosure-lid.3mf  CCR10S_enclosure-lid.gcode  CCR10S_enclosure-lid.html  CCR10S_hole_test.3mf  CCR10S_hole_test.gcode  CCR10S_hole_test.html  Hardware_v1.fzz  README.md  YAPPgenerator_v3.scad  config.scad  dims.scad  enclosure.scad  esp32.scad  fillets.scad  gx16-8.scad  hole_test.scad  hole_test.stl  lcd.scad  mounting_nut_catch.scad  neopixel.scad  oops_button.scad  relay.scad  rfid.scad
machine_access_control/: README.md
specs/001-oops-override/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-second-relay-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/dm_mac/: __init__.py  __main__.py  cli_utils.py  neon_fob_adder.py  neongetter.py  slack_app.py  slack_handler.py  utils.py
tests/: __init__.py  conftest.py  test_cli_utils.py  test_init.py  test_main.py  test_neon_fob_adder.py  test_neongetter.py  test_slack_handler.py  test_slack_handler_second_relay.py  test_utils.py
tests/fixtures/: docker-compose.yml  golden-single-relay-response.json  machines-second-relay.json  machines.json  neon.config-with-static-dupe.json  neon.config-with-static-internal-dupe.json  neon.config-with-static.json  neon.config.json  users-changed.json  users-second-relay.json  users.json
tests/models/: test_machine.py  test_machine_config_second_relay.py  test_machine_second_relay.py  test_machine_second_relay_logs.py  test_machine_state.py  test_users.py
tests/views/: __init__.py  flask_test_helpers.py  quart_test_helpers.py  test_api.py  test_machine.py  (+4 more)
util/: README.md  analyze_authorizations.py  analyze_fob_access.py  combine_user_access.py  users_with_authorizations.py
(+44 files in other folders)
